# boomarr

./: .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  config.example.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml  quality.yml
boomarr/: __init__.py  __main__.py  config.py  const.py  log.py  models.py  pipeline.py  processor.py  scanner.py  state.py  symlinks.py  watcher.py
boomarr/filters/: __init__.py  audio_language.py  base.py  file_extension.py
boomarr/probers/: __init__.py  base.py  ffprobe.py
boomarr/triggers/: __init__.py  base.py  schedule.py
tests/: conftest.py  test_config.py  test_ffprobe.py  test_library_config.py  test_paths_command.py  test_processor.py  test_source_readonly.py  test_state.py  test_structure.py  test_watcher.py
tests/fixtures/: __init__.py  generate.py
tests/fixtures/media/movies/: Sample.Movie.DE.EN.FR.mkv  Sample.Movie.DE.EN.mkv  Sample.Movie.DE.mkv  Sample.Movie.EN.mkv  Sample.Movie.NoAudio.mkv
tests/fixtures/media/movies/Collection/Sequel/: Sequel.Movie.DE.mkv  Sequel.Movie.DE.srt
tests/fixtures/media/movies/Movie.In.Folder/: Movie.In.Folder.DE.EN.mkv  movie.nfo
tests/fixtures/media/non_media/: info.nfo  subtitle.en.srt
tests/fixtures/media/shows/Another.Show/Season 1/: S01E01.DE.EN.FR.mkv
tests/fixtures/media/shows/Sample.Show/: S01E01.DE.mkv  S01E02.EN.mkv  S01E03.DE.EN.mkv
tests/fixtures/media/shows/Sample.Show/Season 1/: S01E01.DE.mkv  S01E02.EN.mkv  S01E03.DE.EN.mkv
(+4 files in other folders)
